--- a/angular.json
+++ b/angular.json
@@ -88,7 +88,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
+
             ],
             "scripts": []
           }
