--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
+    "@angular/router": "^8.1.3",
     "angular-material": "^1.1.20",
     "promise-polyfill": "8.1.3",
     "rxjs": "~6.4.0",
