--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "^8.1.3",
     "angular-material": "^1.1.20",
+    "core-js": "^3.6.1",
     "promise-polyfill": "8.1.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
