--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
     "tslib": "^1.9.0",
+    "webstomp-client": "1.2.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
