--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "^8.1.3",
+    "@stomp/ng2-stompjs": "^7.2.0",
     "angular-material": "^1.1.21",
+    "core-js": "^3.6.1",
+    "jquery": "^3.4.1",
     "promise-polyfill": "8.1.3",
     "rxjs": "~6.4.0",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "tslib": "^1.9.0",
+    "webstomp-client": "1.2.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
