--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
-    "@angular/http": "^7.2.15",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
@@ -25,6 +25,7 @@
     "@stomp/ng2-stompjs": "^7.2.0",
     "angular-material": "^1.1.21",
     "core-js": "^3.6.1",
+    "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
     "promise-polyfill": "8.1.3",
     "rxjs": "~6.4.0",
