--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
   "name": "help-student",
   "version": "0.0.0",
-  "engines": {
-    "node": "12.14.x"
-  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-	 "preinstall": "npm install -g angular-cli",
-	 "postinstall": "ng build && mv dist/* ."
+    "preinstall": "npm install -g angular-cli",
+    "postinstall": "ng build --output-path angularapp --aot --prod"
+  },
+  "engines": {
+    "node": "v13.3.0",
+    "npm": "6.13.1"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.2",
     "@angular/cdk": "^8.2.3",
+    "@angular/cli": "^9.1.4",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
+    "@angular/compiler-cli": "^8.1.3",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
     "@angular/http": "^7.2.16",
@@ -30,20 +33,24 @@
     "@stomp/ng2-stompjs": "^7.2.0",
     "angular-material": "^1.1.21",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "file-saver": "^2.0.2",
+    "install": "^0.13.0",
     "jquery": "^3.5.1",
+    "path": "^0.12.7",
     "promise-polyfill": "8.1.3",
     "rxjs": "~6.4.0",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
     "tslib": "^1.11.2",
+    "typescript": "~3.4.3",
     "webstomp-client": "1.2.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.801.3",
-    "@angular/cli": "~8.1.2",
-    "@angular/compiler-cli": "~8.1.2",
+    "@angular/cli": "^9.1.4",
+    "@angular/compiler-cli": "^8.1.3",
     "@angular/language-service": "~8.1.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
