--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "postinstall": "ng build --prod"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.5.5"
   },
   "engines": {
     "node": "v12.14.0",
@@ -18,10 +21,10 @@
   "dependencies": {
     "@angular/animations": "~8.1.2",
     "@angular/cdk": "^8.2.3",
-    "@angular/cli": "^8.1.2",
     "@angular/common": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/compiler-cli": "^8.1.3",
+    "@angular/compiler": "^8.2.0",
+    "@angular/cli": "^8.2.0",
+    "@angular/compiler-cli": "^8.2.0",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
     "@angular/http": "^7.2.16",
@@ -47,9 +50,9 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.801.3",
-    "@angular/cli": "^8.1.2",
-    "@angular/compiler-cli": "^8.1.3",
+    "@angular-devkit/build-angular": "^0.803.24",
+    "@angular/cli": "^8.2.0",
+    "@angular/compiler-cli": "^8.2.0",
     "@angular/language-service": "~8.1.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
