--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
   },
   "private": true,
   "dependencies": {
-    "@babel/preset-env": "7.5.5",
     "@angular/animations": "~8.1.2",
     "@angular/cdk": "^8.2.3",
+    "@angular/cli": "^8.2.0",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "^8.2.0",
-    "@angular/cli": "^8.2.0",
     "@angular/compiler-cli": "^8.2.0",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
@@ -33,6 +32,8 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "^8.2.14",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
+    "@babel/preset-env": "7.5.5",
     "@stomp/ng2-stompjs": "^7.2.0",
     "angular-material": "^1.1.21",
     "core-js": "^3.6.5",
