--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "^8.2.14",
+    "@babel/compat-data": "^7.8.0",
     "@babel/plugin-proposal-numeric-separator": "^7.8.3",
     "@babel/preset-env": "7.5.5",
     "@stomp/ng2-stompjs": "^7.2.0",
