--- a/package.json
+++ b/package.json
@@ -8,26 +8,33 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --output-path angularapp --aot --prod"
+    "postinstall": "ng build"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.5.5"
   },
   "engines": {
-    "node": "v13.3.0",
-    "npm": "6.13.1"
+    "node": "v12.14.0",
+    "npm": "6.13.4"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.4",
+    "@angular/animations": "~8.1.2",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "~9.1.4",
-    "@angular/compiler": "~9.1.4",
-    "@angular/compiler-cli": "^9.1.4",
-    "@angular/core": "~9.1.4",
-    "@angular/forms": "~9.1.4",
+    "@angular/cli": "^8.2.0",
+    "@angular/common": "~8.1.2",
+    "@angular/compiler": "^8.2.0",
+    "@angular/compiler-cli": "^8.2.0",
+    "@angular/core": "~8.1.2",
+    "@angular/forms": "~8.1.2",
     "@angular/http": "^7.2.16",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~9.1.4",
-    "@angular/platform-browser-dynamic": "~9.1.4",
-    "@angular/router": "^9.1.4",
+    "@angular/platform-browser": "~8.1.2",
+    "@angular/platform-browser-dynamic": "~8.1.2",
+    "@angular/router": "^8.2.14",
+    "@babel/compat-data": "^7.8.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
+    "@babel/preset-env": "7.5.5",
     "@stomp/ng2-stompjs": "^7.2.0",
     "angular-material": "^1.1.21",
     "core-js": "^3.6.5",
@@ -37,18 +44,20 @@
     "jquery": "^3.5.1",
     "path": "^0.12.7",
     "promise-polyfill": "8.1.3",
-    "rxjs": "~6.5.5",
+    "rxjs": "~6.4.0",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
     "tslib": "^1.11.2",
-    "typescript": "~3.8.3",
+    "typescript": "~3.4.3",
     "webstomp-client": "1.2.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.801.3",
-    "@angular/cli": "^9.1.4",
-    "@angular/language-service": "~9.1.4",
+    "@babel/preset-env": "7.5.5",
+    "@angular-devkit/build-angular": "^0.803.24",
+    "@angular/cli": "^8.2.0",
+    "@angular/compiler-cli": "^8.2.0",
+    "@angular/language-service": "~8.1.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -62,6 +71,7 @@
     "karma-jasmine-html-reporter": "^1.5.3",
     "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0"
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3"
   }
 }
